--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,7 +128,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #4acaa8 !important;
+			color: #ffb366 !important;
 		}
 
 	strong, b {
@@ -1796,7 +1796,7 @@ input, select, textarea {
 	}
 
 	header.major h2 {
-		color: #4acaa8;
+		color: #FFB366;
 		font-size: 3.5em;
 	}
 
@@ -1859,7 +1859,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #4acaa8;
+			border-color: #ffb366;
 		}
 
 	select {
@@ -1964,7 +1964,7 @@ input, select, textarea {
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #4acaa8;
+			border-color: #FFB366;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2413,7 +2413,7 @@ input, select, textarea {
 			}
 
 			ul.feature-icons li:before {
-				background: #4acaa8;
+				background: #ffb366;
 				border-radius: 100%;
 				color: #ffffff;
 				display: block;
@@ -2629,7 +2629,7 @@ input, select, textarea {
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #4acaa8;
+			background-color: #ffb366;
 			color: #ffffff !important;
 		}
 
@@ -2637,14 +2637,14 @@ input, select, textarea {
 			input[type="reset"].primary:hover,
 			input[type="button"].primary:hover,
 			.button.primary:hover {
-				background-color: #5ed0b1;
+				background-color: #E88751;
 			}
 
 			input[type="submit"].primary:active,
 			input[type="reset"].primary:active,
 			input[type="button"].primary:active,
 			.button.primary:active {
-				background-color: #39c29d;
+				background-color: #ffb366;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -2711,7 +2711,7 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #4acaa8;
+		background: #ffb366;
 		color: #d2f2e9;
 		height: 100%;
 		overflow-y: auto;
@@ -2762,7 +2762,7 @@ input, select, textarea {
 			}
 
 			#header > header p {
-				color: #d2f2e9;
+				color: #FFB366;
 				font-style: italic;
 				margin: 1em 0 0 0;
 			}
@@ -2783,7 +2783,7 @@ input, select, textarea {
 			}
 
 				#header > footer .icons li a {
-					color: #b7eadc;
+					color: #FF7C59;
 				}
 
 		#header > nav {
@@ -2800,7 +2800,7 @@ input, select, textarea {
 			}
 
 				#header > nav ul li {
-					border-top: solid 2px #5ccfb1;
+					border-top: solid 2px #FFB366;
 					display: block;
 					padding: 0;
 				}
@@ -2819,7 +2819,7 @@ input, select, textarea {
 
 						#header > nav ul li a.active {
 							background: #fff;
-							color: #4acaa8 !important;
+							color: #ffb366 !important;
 						}
 
 					#header > nav ul li:first-child {
@@ -3087,7 +3087,7 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:before {
-						background: #4acaa8;
+						background: #ffb366;
 						color: #ffffff;
 						content: '\f0c9';
 						display: block;
