--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,18 +41,14 @@ article a img{
 	max-width: 300px;
 	border-radius: 10px;
 	transition: .5s all;
-	box-shadow: 12px 12px 5px #999;
+	-moz-box-shadow: 8px 8px 8px #666;
+  	-webkit-box-shadow: 8px 8px 8px #666;
+  	box-shadow: 8px 8px 8px #666;
 
 }
 .photoprof:hover{
 	transform: rotate(-10deg);	
 }
-
-.saludos p{
-	float: right;
-	width: 50%;
-}
-
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
